<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/text_title"
        android:textColor="@color/text_color"
        android:textSize="30sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="23dp"
        app:cardMaxElevation="100dp"
        app:contentPadding="12dp">

        <TextView
            android:id="@+id/weight_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/text_wth"
            android:textColor="@color/text_color"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/kg_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="89dp"
            android:layout_marginTop="100dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/kg"
            android:textColor="@color/text_color"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/weight_edit_text"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:singleLine="true"
            android:maxLines="1"
            android:hint="@string/pss"
            android:textColor="@color/text_color"
            android:textColorHint="@color/text_hint"
            android:textSize="65sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="23dp"
        app:cardMaxElevation="100dp"
        app:contentPadding="12dp">

        <TextView
            android:id="@+id/height_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/hgt"
            android:textColor="@color/text_color"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/cm_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="89sp"
            android:layout_marginTop="100sp"
            android:fontFamily="sans-serif-black"
            android:text="@string/cm"
            android:textColor="@color/text_color"
            android:textSize="35sp" />

        <EditText
            android:id="@+id/height_edit_text"
            android:layout_width="240dp"
            android:singleLine="true"
            android:maxLines="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/alt"
            android:textColor="@color/text_color"
            android:textColorHint="@color/text_hint"
            android:textSize="65sp" />
    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/action_sent_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btn_background"
        android:text="@string/button"
        android:textColor="@color/text_color"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="152dp"
        app:cardBackgroundColor="@color/card_background"
        app:cardMaxElevation="100dp"
        app:cardCornerRadius="23dp">

        <TextView
            android:id="@+id/number_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-black"
            android:layout_marginTop="10sp"
            android:textColor="@color/text_color"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:text="21.78" />

        <TextView
            android:id="@+id/classWeight_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="73sp"
            android:textSize="22sp"
            android:fontFamily="sans-serif-black"
            android:layout_gravity="center_horizontal"
            tools:text="Healthy"/>

        <TextView
            android:id="@+id/range_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textSize="15sp"
            android:textColor="@color/text_color"
            android:layout_marginTop="102sp"
            android:layout_gravity="center_horizontal"
            tools:text="(Normal range is 18.5-24.9)" />

    </androidx.cardview.widget.CardView>


</LinearLayout>